# opencv-mcc-cc-test

./: CMakeLists.txt  README.md
src/: main.cpp
